chore: another ios safari fix for stretched buttons?

--- a/src/app/palette-table/palette-table.component.scss
+++ b/src/app/palette-table/palette-table.component.scss
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 7.5px;
       line-height: 0;
-      display: inline-flexbox;
+      // display: inline-flexbox;
       // height: fit-content;
     }
 
@@ -24,13 +24,13 @@
       box-sizing: border-box;
       border-radius: 5px;
       background-color: #e1e1e1;
-      min-width: var(--minHitDimensionAA) !important;
+      min-width: var(--minHitDimensionAA);
       min-height: var(--minHitDimensionAA);
       font-family: var(--monoFont);
       font-weight: 700;
       font-size: 19px;
       width: 100%;
-      flex-grow: 1;
+      // flex-grow: 1;
 
       span {
         line-height: 0;
